# Dingent

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_REFACTOR_SUMMARY.md  GUEST_MODE.md  LICENSE  README.md  README.zh-CN.md  SUMMARY.md  TESTING_GUEST_MODE.md  UI_CHANGES.md  alembic.ini  dingent.spec  docker-compose.yml  flake.nix  justfile  locustfile.py  pydantic_fix_final.py  pydantic_shadow_fix.py  pydantic_test.py  pyproject.toml
.devin/: wiki.json
.github/workflows/: ci.yaml  ci.yml  docker-image-backend.test.yml  docker-image-backend.yml  docker-image-frontend.test.yml  docker-image-frontend.yml  docker-image-mcp.test.yml  docker-image-mcp.yml  publish-docker.yml  publish-pypi.yml  publish-website.yml
admin-dashboard/: next.config.js  package-lock.json  package.json  vite.config.ts
admin-dashboard/src/: App.tsx  main.tsx  styles.css
admin-dashboard/src/components/: AppLayout.tsx  ConfirmDialog.tsx
admin-dashboard/src/lib/: api.ts  types.ts
admin-dashboard/src/pages/: Plugins.tsx  _app.tsx  _document.tsx  assistants.tsx  index.tsx  logs.tsx  plugins.tsx  settings.tsx
admin-dashboard/src/services/: api.ts
admin-dashboard/src/types/: index.ts
admin-dashboard/src/utils/: helpers.ts
alembic/: env.py
alembic/versions/: 890659c554b6_add_instructions_to_assistant.py
ding-dashboard/: index.html  package.json  tsconfig.app.json
ding-dashboard/src/: styles.css
ding-dashboard/src/components/: SearchableSelect.tsx  ThemeToggle.tsx
ding-dashboard/src/lib/: api.ts  theme.ts  utils.ts
ding-dashboard/src/pages/: Assistants.tsx  Logs.tsx  Settings.tsx
docs/: CONFIG_GUI.md  fix-fastmcp-context.md
examples/: guest-chat-example.html
frontend/: package.json
frontend/src/components/: MainContent.tsx
frontend/src/hooks/: useMessagesManager.ts
my-awesome-agent/.config_backups/20250910-104354/: dingent.toml
my-awesome-agent/.config_backups/20250910-104758/: dingent.toml
my-awesome-agent/.config_backups/20250910-110848/: dingent.toml
my-awesome-agent/.dingent/: langgraph.json
my-awesome-agent/.dingent/data/: resources.db
my-awesome-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
my-awesome-agent/config/assistants/: bioassistants.yaml
my-awesome-agent/config/workflows/: biioiillm.json
plugins/arxiv-mcp-server/: plugin.toml  pyproject.toml
plugins/arxiv-mcp-server/src/arxiv_server/: server.py
plugins/text2sql/: database.py  graph.py  main.py  plugin.toml  settings.py  tool.py
plugins/text2sql/handlers/: handler_builder.py
scripts/: start_mock_server.py
src/.dingent/data/: dingent.db
src/dingent/: cli.py
src/dingent/cli/: assets.py  cli.py  context.py  dev_runner.py  streamlit_config.py
src/dingent/core/: __init__.py  analytics_manager.py  assistant_manager.py  config.py  config_manager.py  context.py  database_manager.py  llm_manager.py  log_manager.py  market_service.py  paths.py  plugin_manager.py  resource_manager.py  schemas.py  secret_manager.py  settings.py  tool_warpper.py  types.py  utils.py  workflow_manager.py
src/dingent/dashboard/: README.md  api.py  app.py  launch.py  modern_app.py  ui_components.py  web_server.py
src/dingent/engine/: __init__.py  graph.py  graph_manager.py  simple_react_agent.py
src/dingent/server/: __init__.py  api_routes.py  app.py  app_factory.py  config_routes.py  copilot_server.py  main.py
templates/basic/: cookiecutter.json
templates/basic/backend/: config.toml  langgraph.json  main.py  server.py
templates/basic/frontend/: package.json
templates/basic/mcp/: main.py
templates/basic/{{ cookiecutter.project_slug }}/: README.md  dingent.toml  pyproject.toml
templates/basic/{{ cookiecutter.project_slug }}/backend/: config.toml  graph.py  langgraph.json  main.py  pyproject.toml
templates/basic/{{ cookiecutter.project_slug }}/backend/plugins/arxiv-mcp-server/: README.md  smithery.yaml
templates/plugins/: cookiecutter.json
templates/plugins/{{ cookiecutter.project_slug }}/: plugin.toml  settings.py  tool.py
tests/: TESTING_SUMMARY.md  conftest.py  dingent.toml  setup_data.py  test_agent_replay.py  test_performance.py  test_subpath_deployment.py  test_workflow_assistant_cleanup.py  utils.py
tests/api/: test_assistant_routes.py  test_workflow_routes.py
tests/backend/: conftest.py  test_agent_graph.py  test_mcp_manager.py
tests/cli/: test_cli.py  test_init_command.py  test_run_command.py
tests/core/: conftest.py  test_assistant_manager.py  test_config_manager.py  test_config_manager_actual.py  test_llm_manager.py  test_llm_manager_standalone.py  test_plugin_manager.py  test_workflow_manager.py
tests/data/: trace.json
tests/engine/: conftest.py  dummy_env.py  test_graph_build_and_run.py
tests/mcp/: conftest.py  test_text2sql_tool.py
tests/plugins/: my_server.py  test_manager.py
tests/plugins/backend/: config.toml
ui/: dingent.toml  middleware.ts  next.config.ts  package.json  tsconfig.json
ui/admin-dashboard/: .prettierignore  index.html  knip.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/admin-dashboard/src/: App.tsx  main.tsx  routeTree.gen.ts
ui/apps/admin-dashboard/: next.config.ts  package.json  tsconfig.json
ui/apps/dashboard/: next.config.ts  package.json  tsconfig.json
ui/apps/frontend/: .gitignore  components.json  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
ui/frontend/: .eslintignore  next.config.ts  package.json  tsconfig.json
ui/mono/: .gitignore  package.json  tsconfig.json  turbo.json
ui/old/b-admin-dashboard/: package.json
ui/src/: middleware.ts  proxy.ts
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: CopilotChatActivityMessage.tsx  CopilotChatMessageViewNoActivity.tsx  CopilotKitWrapper.tsx  MyA2UIMessageRenderer.tsx  utils.ts
ui/y/: package.json
website/: docusaurus.config.ts  package-lock.json
website/docs/: intro.md
(+747 files in other folders)
