[project]
name = "dingent"
description = "AI agent framework"
readme = "README.md"
authors = [{ name = "saya", email = "c3313433633@gmail.com" }]
dynamic = ["version"]
requires-python = ">=3.12, <3.14"
license-files = ["LICENSE"]

dependencies = [
  "cookiecutter>=2.6.0",
  "toml>=0.10.2",
  "pydantic-settings<3.0.0,>=2.4.0",
  "loguru>=0.7.3",
  "langgraph>=0.6.3",
  "typer>=0.16.0",
  "copilotkit>=0.1.56",
  "fastapi>=0.115.6",
  "langchain>=0.3.23",
  # "langchain-chroma>=0.2.3",
  "langchain-community>=0.3.21",
  "fastmcp>=2.2.0",
  "langchain-experimental>=0.3.4",
  "langchain-mcp-adapters>=0.0.11",
  "langchain-openai>=0.3.14,<1.0.0",
  "langgraph>=0.3.31,<1.0.0",
  "langgraph-cli[inmem]>=0.1.73",
  "langgraph-swarm>=0.0.12",
  "numpy>=2.3.0",
  "tomlkit>=0.13.3",
  "nodejs-wheel>=22.18.0",
  "psutil>=7.0.0",
  "diskcache>=5.6.3",
  "langgraph-checkpoint-sqlite>=2.0.11",
]
dev = [
  "ipython>=9.4.0",
  "pytest-mock>=3.14.1",
  "aiobotocore>=2.22.0",
  "basedpyright>=1.28",
  "coverage<8.0.0,>=7.4.3",
  "pre-commit<4.0.0,>=3.6.2",
  "pytest<9.0.0,>=8.4.1",
  "pytest-asyncio>=0.26.0",
  "pytest-mock>=3.14.1",
  "python-dotenv>=1.1.0",
  "ruff<1.0.0,>=0.11.3",
  "ipython>=9.4.0",
  "ruff>=0.12.7",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 180

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001"]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"

[tool.hatch.build]
exclude = [
  "tests",
  ".git",
  ".github",
  "/ui",
  ".vscode",
  ".idea",
  ".pytest_cache",
  "__pycache__",
]
force-include = { "src/dingent/static" = "src/dingent/static" }
[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"


[tool.basedpyright]
include = ["src/"]
exclude = ["**/__pycache__"]
# defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "standard"



[tool.uv]
link-mode = "symlink"
default-groups = "all"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]


[project.scripts]
dingent = "dingent.cli:app"
